@@ -48,39 +48,39 @@ public class CompService {
     }
 
     public List<ResumeResponse.CompManageDTO> findAllAppli(Integer userId) {
-        List<Apply> applyList = applyJPARepo.findAllByUidN1(userId);
+        List<Apply> applyList = applyJPARepo.findAllByUidJoinResumeJobsSkills(userId);
 
-        List<ResumeResponse.CompManageDTO> cmrDTOList = new ArrayList<>();
-        applyList.stream().map(apply -> {
-            return cmrDTOList.add(ResumeResponse.CompManageDTO.builder()
-                    .resume(apply.getResume())
-                    .apply(apply)
-                    .jobs(apply.getJobs())
-                    .skillList(apply.getResume().getSkillList()).build());
-        }).collect(Collectors.toList());
-        for (int i = 0; i < cmrDTOList.size(); i++) {
-            cmrDTOList.get(i).setId(i + 1);
+        List<ResumeResponse.CompManageDTO> respList = new ArrayList<>();
+
+        applyList.stream().map(apply ->
+                respList.add(ResumeResponse.CompManageDTO.builder()
+                        .apply(apply)
+                        .jobs(apply.getJobs())
+                        .resume(apply.getResume())
+                        .skillList(apply.getResume().getSkillList()).build())).toList();
+
+        for (int i = 0; i < respList.size(); i++) {
+            respList.get(i).setId(i + 1);
         }
-        return cmrDTOList;
+        return respList;
     }
 
     public List<ResumeResponse.CompManageDTO> findNoResp(Integer userId) {
         List<Apply> applyList = applyJPARepo.findAllByUidI2(userId);
-
-        List<ResumeResponse.CompManageDTO> cmrDTOList = new ArrayList<>();
+        List<ResumeResponse.CompManageDTO> respList = new ArrayList<>();
 
         applyList.stream().map(apply -> {
-            return cmrDTOList.add(ResumeResponse.CompManageDTO.builder()
+            return respList.add(ResumeResponse.CompManageDTO.builder()
                     .resume(apply.getResume())
-                    .apply(apply)
                     .jobs(apply.getJobs())
+                    .apply(apply)
                     .skillList(apply.getResume().getSkillList()).build());
-        }).collect(Collectors.toList());
-        for (int i = 0; i < cmrDTOList.size(); i++) {
-            cmrDTOList.get(i).setId(i + 1);
-        }
+        }).toList();
 
-        return cmrDTOList;
+        for (int i = 0; i < respList.size(); i++) {
+            respList.get(i).setId(i + 1);
+        }
+        return respList;
 
     }
 
@@ -95,43 +95,30 @@ public class CompService {
 
 
     public List<CompResponse.RusaDTO> findApplicants(Integer jobsId) {
-        //공고에 지원한 이력서를 전부 찾는데, 그 중 지원안한 상태는 제외해서 조회
-        List<Apply> applyList = applyJPARepo.findAllByJidAn1(jobsId);
-        // DTO를 받을 그릇 준비
-        List<CompResponse.RusaDTO> rusaDTOList = new ArrayList<>();
+        List<Apply> applyList = applyJPARepo.findAllByJIdJoinRJoinJN1(jobsId);
+        System.out.println("어플라이 갯수 : " + applyList.get(0).getResume().getArea());
+        List<CompResponse.RusaDTO> respList = new ArrayList<>();
 
-        /*
-         * 원래 for문으로 조회해서 주입하였으나 그 방식은 서버에 부담이 크다.
-         * 쿼리를 for문으로 날린다는게...
-         */
-        applyList.stream().map(apply -> {
-            // apply에 Resume가 매핑되어있어서 가져옴
-            Resume resume = apply.getResume();
-            /*
-             * 근데 apply안에 resume안에 user는 잘 가져올수있을까??
-             * 그래서 sout찍어보기 테스트
-             */
-            User user = apply.getResume().getUser();
 
-            return rusaDTOList.add(CompResponse.RusaDTO.builder()
-                    .user(user).resume(resume).apply(apply).build());
-        }).collect(Collectors.toList());
-
-        for (int i = 0; i < rusaDTOList.size(); i++) {
-            rusaDTOList.get(i).setId(i + 1);
+        respList = applyList.stream().map(apply -> CompResponse.RusaDTO.builder()
+                .apply(apply)
+                .resume(apply.getResume())
+                .user(apply.getResume().getUser())
+                .skills(apply.getResume().getSkillList()).build()).toList();
+        for (int i = 0; i < respList.size(); i++) {
+            respList.get(i).setId(i + 1);
         }
-        return rusaDTOList;
+        return respList;
     }
 
 
     // 기업 회원가입
     @Transactional
-    public CompResponse.CompJoinDTO join(CompRequest.CompJoinDTO reqDTO) {
+    public User join(CompRequest.CompJoinDTO reqDTO) {
         // 회원가입 할 때마다 이미지 못가져와서 터지니까 디폴트 이미지 하나 추가함
-        User comp = compJPARepo.save(reqDTO.toEntity(2));
-
-        return new CompResponse.CompJoinDTO(comp);
+        return compJPARepo.save(reqDTO.toEntity(2));
     }
+
 
     public List<JobsResponse.ApplyResumeListDTO> findAllByJobsId(Integer jobsId) {
         List<Apply> applyList = applyJPARepo.findAllByJobsId(jobsId);
@@ -151,23 +138,20 @@ public class CompService {
         return listDTOS;
     }
 
-    public List<CompResponse.CompHomeDTO> findAllByUserId(User sessionComp) {
-        List<Jobs> jobsList = jobsJPARepo.findAllByUserId(sessionComp.getId());
-        List<CompResponse.CompHomeDTO> listDTOS = new ArrayList<>();
+    public List<CompResponse.CompHomeDTO> compHomeDTOS(Integer sessionUserId) {
+        List<Jobs> jobsList = jobsJPARepo.findAllByUserIdWithSkill(sessionUserId);
+        List<CompResponse.CompHomeDTO> respList = new ArrayList<>();
 
-        for (int i = 0; i < jobsList.size(); i++) {
-            List<Skill> skills = skillJPARepo.findByJobsId(jobsList.get(i).getId());
-            listDTOS.add(CompResponse.CompHomeDTO.builder()
-                    .jobs(jobsList.get(i))
-                    .skillList(skills)
-                    .build());
+        jobsList.stream().map(jobs ->
+                respList.add(CompResponse.CompHomeDTO.builder()
+                        .jobs(jobs)
+                        .skillList(jobs.getSkillList()).build())).toList();
+
+        for (int i = 0; i < respList.size(); i++) {
+            respList.get(i).setId(i + 1);
         }
 
-        for (int i = 0; i < listDTOS.size(); i++) {
-            listDTOS.get(i).setId(i + 1);
-        }
-
-        return listDTOS;
+        return respList;
     }
 
     //기업 로그인 시 보여줄 채용 공고
@@ -198,30 +182,24 @@ public class CompService {
 //    }
 
     // 기업 로그인하면 보여줄 이력서 목록들
-    public List<CompResponse.ResumeUserSkillDTO> findAllRusList() {
+    public List<CompResponse.ResumeUserSkillDTO> readResume() {
         Sort sort = Sort.by(Sort.Direction.DESC, "id");
-
-        List<Resume> resumeList = resumeJPARepo.findAll(sort);
+        List<Resume> resumeList = resumeJPARepo.findAllJoinUserWithSkills(sort);
 
         List<CompResponse.ResumeUserSkillDTO> rusList = new ArrayList<>();
 
-        for (int i = 0; i < resumeList.size(); i++) {
-            User user = userJPARepo.findById(resumeList.get(i).getUser().getId())
-                    .orElseThrow(() -> new Exception401("사용자를 찾을 수 없습니다."));
-            List<Skill> skills = skillJPARepo.findAllByResumeId(resumeList.get(i).getId());
-            rusList.add(CompResponse.ResumeUserSkillDTO.builder()
-                    .resume(resumeList.get(i))
-                    .user(user)
-                    .skills(skills)
-                    .build());
-        }
+        resumeList.stream().map(resume ->
+                rusList.add(CompResponse.ResumeUserSkillDTO.builder()
+                        .resume(resume)
+                        .user(resume.getUser())
+                        .skills(resume.getSkillList()).build())).toList();
 
         return rusList;
     }
 
     @Transactional
-    public User updateById(User sessionUser, CompRequest.UpdateDTO requestDTO) {
-        User user = compJPARepo.findById(sessionUser.getId())
+    public User updateById(Integer sessionUserId, CompRequest.UpdateDTO requestDTO) {
+        User user = compJPARepo.findById(sessionUserId)
                 .orElseThrow(() -> new Exception401("로그인이 필요한 서비스입니다."));
 
         if (requestDTO.getMyName() != null) {
